Fixed some bugs and added crafting-table-functionality.
Renamed Package me.trqhxrd.grapesrpg.api.objects.blocks to me.trqhxrd.grapesrpg.api.objects.block.
Added ClickActionPlaceBlock, which is a default ClickAction, which places a free configurable block on right-click.
Renamed GrapesItem#getId() to GrapesItem#getID().
Added CraftItemListener for cancelling vanilla Crafting.
Added CraftingTableBlock for opening a crafting-table-GUI.